--- a/index.css
+++ b/index.css
@@ -1,4 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,300&display=swap');
+<style>
+
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,300;6..12,400&display=swap');
+</style>
 
 
 
@@ -20,6 +24,7 @@ body{
 }
 
 main{
+    /* min-width: 100vh; */
     width: 90vw;
     min-height: calc(100vh - 10rem - 6.1rem);
 }
@@ -33,7 +38,7 @@ main{
     justify-content: space-between;
     align-items: center;
     /* background-color: rgb(216, 214, 211); */
-    box-shadow: 0px 2.98256px 7.4564px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 2.98256px 7.4564px rgba(0, 0, 0, 0.2); 
 }
 
 .header-div{
