--- a/index.css
+++ b/index.css
@@ -126,6 +126,9 @@ main{
 @media(max-width: 62em){
     .navbar-mobile-btn{
         display: block;
+        z-index: 999;
+        border: 3px solid #212529;
+        color: #212529;
     }
 
 
@@ -137,7 +140,39 @@ main{
         font-size: 2rem;
     }
 
-    
+    .header{
+        padding: 0 2rem;
+        position: relative;
+    }
+
+    html{
+        font-size: 62.5%;
+    }
+
+    .navbar{
+        /* display: none; */
+        width: 100%;
+        height: 100vh;
+        background-color: #ede5df;
+        position: absolute;
+        top: 0;
+        left: 0;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        
+
+    }
+
+    .navbar-list{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+
+    }
 
 }
 
