--- a/index.css
+++ b/index.css
@@ -16,11 +16,13 @@
 html{
     font-size: 62.5%;
     color: red;
+    overflow-x: hidden;
     
 }
 
 body{
     border: 2rem solid #ff7817;
+    overflow-x: hidden;
 }
 
 main{
@@ -162,7 +164,14 @@ main{
         justify-content: center;
         align-items: center;
 
-        
+        /* to get transitionnn */
+        transform: translateX(100%);
+        transition: all 0.5s linear;
+
+
+        opacity: 0;
+        visibility: hidden;
+        pointer-events: none;
 
     }
 
