if active class is present then use css

--- a/index.css
+++ b/index.css
@@ -183,6 +183,14 @@ main{
 
     }
 
+
+    .active .navbar{
+        transform: translateX(0);
+        opacity: 1;
+        visibility: visible;
+        pointer-events: auto;
+    }
+
 }
 
 
