--- a/index.css
+++ b/index.css
@@ -139,7 +139,7 @@ main{
     }
 
     .header-link{
-        font-size: 2rem;
+        font-size: 2.4rem;
     }
 
     .header{
@@ -191,6 +191,26 @@ main{
         pointer-events: auto;
     }
 
+    .active .navbar-mobile-btn .nav-mobile-icon[name="close-outline"]{
+        display: block;
+    }
+
+    .active .navbar-mobile-btn .nav-mobile-icon[name="menu-outline"]{
+        display: none;
+    }
+
+}
+
+
+/* below 560px */
+@media(max-width: 35em){
+    .header{
+        padding: 0 2rem;
+    }
+
+    .header-link{
+        font-size: 2rem;
+    }
 }
 
 
