--- a/index.css
+++ b/index.css
@@ -42,7 +42,10 @@ main{
     /* background-color: rgb(216, 214, 211); */
     box-shadow: 0px 2.98256px 7.4564px rgba(0, 0, 0, 0.2); 
     
+    
 }
+
+
 
 .header-div{
     display: flex;
@@ -243,11 +246,20 @@ ul{
 .footer-div-row{
     display: flex;
     flex-wrap: wrap;
+    gap: 1rem;
+}
+
+.footer-logo{
+    height: 4rem;
+    width: auto;
+    align-content: center;
+
 }
 
 .footer-div-row-col{
-    width: 25%;
+    width: 20%;
     padding: 0 15px;
+    margin-bottom: 20px;
 }
 
 .footer-div-row-col h4{
@@ -284,4 +296,18 @@ ul{
 
 .footer-div-row-col ul li a:hover{
     padding-left: 8px;
+}
+
+
+@media(max-width: 62em){
+    .footer-div-row-col{
+        width: 40%;
+        margin-bottom: 30px;
+    }
+}
+
+@media(max-width: 35em){
+    .footer-div-row-col{
+        width: 100%;
+    }
 }
