--- a/index.css
+++ b/index.css
@@ -35,7 +35,7 @@ main{
 .header{
     /* 1rem = 10px  */
     padding: 0 4.8rem;    
-    height: 10rem;
+    height: 20rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -310,4 +310,24 @@ ul{
     .footer-div-row-col{
         width: 100%;
     }
+}
+
+
+
+
+
+.section-wrapper{
+    margin: 0;
+    padding: 0;
+  
+
+}
+
+.slider-img{
+    width: 100%;
+    height: 600px;
+}
+
+.section-wrapper .slide{
+    
 }
