--- a/index.css
+++ b/index.css
@@ -316,20 +316,53 @@ ul{
 
 
 
-.section-wrapper{
+/* .section-wrapper{
     margin: 0;
     padding: 0;
-  
-
-}
-
-.slider-img{
+} */
+/* 
+.slide-img{
     width: 100%;
     height: 600px;
 }
 
-.section-wrapper .slide{
+.slide{
     display: flex;
     align-items: center;
     flex-wrap: wrap;
+} */
+
+
+.section{
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.slider{
+    width: 100%;
+    height: 500px;
+    overflow: hidden;
+}
+
+.slides{
+    width: 500%;
+    height: 500px;
+    display: flex;
+}
+
+.slides input{
+    display: none;
+}
+
+.slide{
+    width: 20%;
+    transition: 2s;
+}
+
+.slide img{
+    width: 100%;
+    height: 500px;
 }
