--- a/index.css
+++ b/index.css
@@ -6,6 +6,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Nunito+Sans:opsz,wght@6..12,300;6..12,400&display=swap');
 
 
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Kalam&family=Nunito+Sans:opsz,wght@6..12,300;6..12,400&display=swap');
+
+
 
 *{
     padding: 0;
@@ -347,7 +350,7 @@ ul{
 
 .slider{
     width: 100%;
-    height: 500px;
+    height: 600px;
     overflow: hidden;
 }
 
@@ -368,7 +371,7 @@ ul{
 
 .slide img{
     width: 100%;
-    height: 500px;
+    height: 600px;
 }
 
 .nav-m{
@@ -440,7 +443,7 @@ ul{
     background-color: #ff7817;
 }
 
-
+/* 2nd sectionn start */
 .dinning-section{
     padding: 5rem 30rem;
     
@@ -501,7 +504,7 @@ ul{
     font-size: large;
 }
 
-
+/* 3rd sectionn start */
 .story{
     background-color: #C8A992;
     width: 100%;
@@ -511,6 +514,22 @@ ul{
 .story-one{
     display: flex;
     text-align: center;
+    color: #212529;
+    font-size: xx-large;
+    
+}
+
+.story-one p{
+    font-family: 'Kalam', cursive;
+    margin-top: 7rem;
+    margin-left: 2rem;
+    margin-right: 2rem;
+}
+
+.pan{
+    font-size: xxx-large;
+    font-family: 'Kalam', cursive;
+    text-decoration: underline;
 }
 
 .one-img{
@@ -520,6 +539,18 @@ ul{
 
 .story-two{
     display: flex;
+    text-align: center;
+    color: #212529;
+    font-size: xx-large;
+    margin-top: 10rem;
+
+}
+
+.story-two p{
+    font-family: 'Kalam', cursive;
+    margin-top: 14rem;
+    margin-left: 10rem;
+    
 }
 
 .two-img{
