--- a/index.css
+++ b/index.css
@@ -557,3 +557,58 @@ ul{
     width: 500px;
     height: 350px;
 }
+
+
+/* 4th sectionn start */
+
+.banner{
+    /* background: url("Images/reserved (4).jpg"); */
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
+    align-items: center;
+    color: #fff;
+    padding-bottom: 20px;
+}
+
+.card-container{
+    display: grid;
+    grid-template-columns: 420px 420px;
+}
+
+.card-img{
+    background: url("Images/reserved (1).jpg") center/cover no-repeat;
+}
+
+.banner h1{
+    padding-bottom: 40px;
+    margin-bottom: 20px;
+    text-align: center;
+    color: #212529;
+    font-size: xxx-large;
+    font-family: 'Kalam', cursive;
+    font-weight: lighter;
+    margin-top: 1rem;
+}
+
+.card-content{
+    background: #0000;
+    height: 330px;
+    
+}
+
+.card-content h3{
+    text-align: center;
+    color: #212529;
+    padding: 25px 0 10px 0;
+    font-size: 26px;
+    font-weight: 500;
+    /* font-family: 'Kalam', cursive; */
+}
+
+
+/* .testimo{
+    width: 100%;
+    height: 400px;
+} */
