--- a/index.css
+++ b/index.css
@@ -320,26 +320,7 @@ ul{
 }
 
 
-
-
-
-/* .section-wrapper{
-    margin: 0;
-    padding: 0;
-} */
-/* 
-.slide-img{
-    width: 100%;
-    height: 600px;
-}
-
-.slide{
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-} */
-
-
+/* 1st section start */
 .section{
     margin: 0;
     padding: 0;
@@ -655,6 +636,8 @@ form input[type=submit]:hover{
     }
 }
 
+
+/* 5th section testimonial css */
 .testimo{
     width: 100%;
     height: 700px;
@@ -675,4 +658,32 @@ form input[type=submit]:hover{
     flex-direction: column;
     align-items: center;
     margin-top: 10rem;
+    /* font-family: Nunito sans; */
+    font-family: 'Kalam', cursive;
 }
+
+.testimo-img div h1{
+     font-size: xxx-large;
+     font-weight: 500;
+     font-family: 'Kalam', cursive;
+     margin-bottom: 1rem;
+     
+}
+
+.testimo-img div h4{
+    font-size: medium;
+    font-weight: 200;
+    margin-bottom: 1rem;
+    font-family: 'Kalam', cursive;
+}
+
+.testimo-img div p{
+    width: 50%;
+    height: 300px;
+    line-height: 3rem;
+    padding: 3rem;
+    font-size: x-large;
+    /* background: #212529; */
+    font-family: 'Kalam', cursive;
+}
+
