--- a/index.css
+++ b/index.css
@@ -68,8 +68,9 @@ main{
 
 
 .header .logo{
-    height: 4rem;
+    height: 15rem;
     width: auto;
+    /* color: #ff7817; */
 }
 
 .header .navbar-list-inline{
@@ -242,8 +243,26 @@ main{
     /* display: flex; */
     justify-content: space-between;
     /* align-items: center; */
-    background-color: rgb(216, 214, 211);
+    /* background-color: rgb(216, 214, 211); */
     box-shadow: 0px -2.98256px 7.4564px 0px rgba(0, 0, 0, 0.3);
+}
+
+.footer-div img{
+    display: flex;
+    /* flex-direction: column; */
+    height: 15rem;
+    width: auto;
+    align-items: center;
+    justify-content: center;
+    /* margin-left: %; */
+    margin-right: 95%;
+    /* margin-bottom: 5rem; */
+
+}
+
+.phone-address{
+    color: #212529;
+    font-size: 1.5rem;
 }
 
 ul{
@@ -264,7 +283,7 @@ ul{
 }
 
 .footer-div-row-col{
-    width: 20%;
+    width: 30%;
     padding: 0 15px;
     margin-bottom: 20px;
 }
@@ -280,7 +299,7 @@ ul{
 
 .footer-div-row-col h4::before{
     content: '';
-    position: absolute;
+    position: relative;
     left: 0;
     bottom: -10px;
     background-color: #ff7817;
@@ -293,7 +312,7 @@ ul{
 }
 
 .footer-div-row-col ul li a{
-    font-size: 1rem;
+    font-size: 1.5rem;
     color: #212529;
     text-decoration: none;
     font-weight: 400;
