--- a/index.css
+++ b/index.css
@@ -25,16 +25,23 @@ html{
 }
 
 body{
-    border: 2rem solid #ff7817;
+    /* border: 2rem solid #ff7817; */
     overflow-x: hidden;
     line-height: 1.5;
     font-family: 'Nunito Sans', sans-serif;
+    /* border-top: 2rem solid #ff7817; */
+    border-bottom: 2rem solid #ff7817;
+    border-left: 2rem solid #ff7817;
+    border-right: 2rem solid #ff7817;
 }
+
+
 
 main{
     min-width: 100vh;
     /* width: 90vw; */
     min-height: calc(100vh - 20rem);
+    margin-top: 20rem;
 }
 
 
@@ -43,10 +50,16 @@ main{
     padding: 0 4.8rem;    
     height: 20rem;
     display: flex;
+    position: fixed;
+    width: 97.35%;
+    background-color: #fff;
     justify-content: space-between;
     align-items: center;
     /* background-color: rgb(216, 214, 211); */
     box-shadow: 0px 2.98256px 7.4564px rgba(0, 0, 0, 0.2); 
+    border-top: 2rem solid #ff7817;
+    /* border-right: 2rem solid #ff7817;
+    border-left: 2rem solid #ff7817; */
     
     
 }
@@ -57,6 +70,7 @@ main{
     display: flex;
     gap: 4.8rem;
     align-items: center;
+    /* position: fixed; */
 
 }
 
@@ -71,6 +85,7 @@ main{
     height: 15rem;
     width: auto;
     /* color: #ff7817; */
+    
 }
 
 .header .navbar-list-inline{
@@ -705,4 +720,6 @@ form input[type=submit]:hover{
     /* background: #212529; */
     font-family: 'Kalam', cursive;
 }
+
+
 
