--- a/index.css
+++ b/index.css
@@ -250,7 +250,7 @@ main{
 }
 
 
-
+/*=============footetr start=========== */
 
 .footer{
     padding: 1.5rem 4.8rem;    
@@ -353,8 +353,12 @@ ul{
     }
 }
 
+/*=============footetr end=========== */
 
-/* 1st section start */
+
+
+
+/* ===========1st section start========== */
 .section{
     margin: 0;
     padding: 0;
@@ -458,7 +462,11 @@ ul{
     background-color: #ff7817;
 }
 
-/* 2nd sectionn start */
+/* ===========1st section end========== */
+
+
+
+/* ==========2nd sectionn start=========== */
 .dinning-section{
     padding: 5rem 30rem;
     
@@ -519,7 +527,12 @@ ul{
     font-size: large;
 }
 
-/* 3rd sectionn start */
+/* ===========2nd section end========== */
+
+
+
+
+/* ==============3rd sectionn start============ */
 .story{
     background-color: #C8A992;
     width: 100%;
@@ -573,8 +586,12 @@ ul{
     height: 350px;
 }
 
+/* ==============3rd sectionn end============ */
 
-/* 4th sectionn start */
+
+
+
+/*=============== 4th sectionn start ==============*/
 
 .banner{
     /* background: url("Images/reserved (4).jpg"); */
@@ -670,8 +687,12 @@ form input[type=submit]:hover{
     }
 }
 
+/* ==============4th sectionn end============ */
 
-/* 5th section testimonial css */
+
+
+
+/* ==================5th section testimonial css===================== */
 .testimo{
     width: 100%;
     height: 700px;
@@ -720,6 +741,4 @@ form input[type=submit]:hover{
     /* background: #212529; */
     font-family: 'Kalam', cursive;
 }
-
-
-
+/* ==============5th sectionn end============ */
