--- a/index.css
+++ b/index.css
@@ -801,7 +801,7 @@ form input[type=submit]:hover{
     margin-top: 3%;
     width: 100%;
     height: 400px;
-    background-color: #a09893;
+    /* background-color: #a09893; */
     align-content: center;
     display: flex;
     justify-content: center;
@@ -813,7 +813,7 @@ form input[type=submit]:hover{
     width: 200px;
     height: 350px;
     margin: 1rem;
-    background-color: #C8A992;
+    background-color: #f4f2f0;
 }
 
 .inner-most-card-div img{
