--- a/index.css
+++ b/index.css
@@ -41,14 +41,14 @@ main{
     min-width: 100vh;
     /* width: 90vw; */
     min-height: calc(100vh - 20rem);
-    margin-top: 20rem;
+    /* margin-top: 20rem; */
 }
 
 
 .header{
     /* 1rem = 10px  */
     padding: 0 4.8rem;    
-    height: 20rem;
+    height: 13rem;
     display: flex;
     position: fixed;
     width: 97.35%;
@@ -60,7 +60,7 @@ main{
     border-top: 2rem solid #ff7817;
     /* border-right: 2rem solid #ff7817;
     border-left: 2rem solid #ff7817; */
-    
+    overflow: hidden;
     
 }
 
@@ -82,7 +82,7 @@ main{
 
 
 .header .logo{
-    height: 15rem;
+    height: 10rem;
     width: auto;
     /* color: #ff7817; */
     
@@ -371,6 +371,7 @@ ul{
     width: 100%;
     height: 600px;
     overflow: hidden;
+    /* background-size: cover; */
 }
 
 .slides{
@@ -388,9 +389,10 @@ ul{
     transition: 2s;
 }
 
-.slide img{
+.slide-img{
     width: 100%;
-    height: 600px;
+    height: 100vh;
+    background-size: cover;
 }
 
 .nav-m{
@@ -750,7 +752,10 @@ form input[type=submit]:hover{
 .main-menu{
     color: #212529;
     padding: 4rem 8rem;
+    margin-top: 13rem;
 }
+
+
 
 .menuss .footer:hover{
     position: absolute;
